src/content/tools/docs/1.12/index.md
<!-- nf-core documentation master file, created by
sphinx-quickstart on Thu Jan  3 16:24:03 2019.
You can adapt this file completely to your liking, but it should at least
contain the root `toctree` directive. -->

# Welcome to nf-core tools API documentation!

# Contents:

- [nf_core.bump_version](bump_version.md)
  - [`bump_nextflow_version()`](bump_version.md#nf_core.bump_version.bump_nextflow_version)
  - [`bump_pipeline_version()`](bump_version.md#nf_core.bump_version.bump_pipeline_version)
  - [`update_file_version()`](bump_version.md#nf_core.bump_version.update_file_version)
- [nf_core.create](create.md)
- [nf_core.download](download.md)
  - [`DownloadWorkflow`](download.md#nf_core.download.DownloadWorkflow)
- [nf_core.launch](launch.md)
- [nf_core.licences](licences.md)
  - [`WorkflowLicences`](licences.md#nf_core.licences.WorkflowLicences)
- [nf_core.lint](lint.md)
  - [`PipelineLint`](lint.md#nf_core.lint.PipelineLint)
  - [`run_linting()`](lint.md#nf_core.lint.run_linting)
- [nf_core.list](list.md)
  - [`LocalWorkflow`](list.md#nf_core.list.LocalWorkflow)
  - [`RemoteWorkflow`](list.md#nf_core.list.RemoteWorkflow)
  - [`Workflows`](list.md#nf_core.list.Workflows)
  - [`get_local_wf()`](list.md#nf_core.list.get_local_wf)
  - [`list_workflows()`](list.md#nf_core.list.list_workflows)
  - [`pretty_date()`](list.md#nf_core.list.pretty_date)
- [nf_core.modules](modules.md)
  - [`ModulesRepo`](modules.md#nf_core.modules.ModulesRepo)
  - [`PipelineModules`](modules.md#nf_core.modules.PipelineModules)
- [nf_core.schema](schema.md)
  - [`PipelineSchema`](schema.md#nf_core.schema.PipelineSchema)
- [nf_core.sync](sync.md)
- [nf_core.utils](utils.md)
  - [`check_if_outdated()`](utils.md#nf_core.utils.check_if_outdated)
  - [`fetch_wf_config()`](utils.md#nf_core.utils.fetch_wf_config)
  - [`poll_nfcore_web_api()`](utils.md#nf_core.utils.poll_nfcore_web_api)
  - [`rich_force_colors()`](utils.md#nf_core.utils.rich_force_colors)
  - [`setup_requests_cachedir()`](utils.md#nf_core.utils.setup_requests_cachedir)
  - [`wait_cli_function()`](utils.md#nf_core.utils.wait_cli_function)

# Indices and tables

- [Index](genindex.md)
- [Module Index](py-modindex.md)
- [Search Page](search.md)
